@@ -1,8 +1,10 @@
 qgis (2.9.0) UNRELEASED; urgency=medium
 
   * New development version 2.9 after branch of 2.8
+  * include dependency to liblwgeom
+  * 'stretch' package a bit
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 20 Feb 2015 13:06:05 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Fri, 22 May 2015 08:34:55 +0200
 
 qgis (2.8.0) unstable; urgency=medium
 
